Feat: FontTable | Choose font to Preview

--- a/index.html
+++ b/index.html
@@ -10,6 +10,363 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Mulish:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Alexa.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Clip.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Bellview.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Chicago.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Codystar-Regular.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Cotton.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Daisy.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Garden.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Keith.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Springfield.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/LoveL.otf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Photogenic.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Sacramento-Regular.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Selfie.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/soulja.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/designeroren/neon/Venetian.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Amanda.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Amsterdam.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Austin.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Avante.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Barcelona.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Bayview.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Beachfront.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Buttercup.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Chelsea.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/ClassicType.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Freehand.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Freespirit.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Greenworld.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/LoveNeon.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/LoveNote.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Marquee.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Mayfair.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Melbourne.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Monaco.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/NeoTokyo.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/NeonGlow.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/NeonLite.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Neonscript.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Neontrace.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Nevada.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/NewCursive.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Northshore.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Rocket.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Royalty.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/SciFi.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Signature.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Typewriter.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Vintage.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/Waikiki.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+    <link
+      as="font"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/minhkhoi2001/2021/ledneon/fonts/WildScript.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
     <title>Quang cao 88</title>
   </head>
   <body>
