update brand name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>Quang cao 88</title>
+    <title>Quảng cáo Osiris</title>
   </head>
   <body>
     <div id="root"></div>
